--- a/templates/home.html
+++ b/templates/home.html
@@ -9,30 +9,36 @@
     <title>Simplexity</title>
 </head>
 <body>
-    <h1>Boards</h1>
-
-    <table border="1">
-        <thead>
+  <div class="container">
+    <ol class="breadcrumb my-4">
+      <li class="breadcrumb-item active">
+        Boards
+      </li>
+    </ol>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Board</th>
+          <th>Posts</th>
+          <th>Topics</th>
+          <th>Last Post</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for board in boards %}
           <tr>
-            <th>Board</th>
-            <th>Posts</th>
-            <th>Topics</th>
-            <th>Last Post</th>
+            <td>
+              {{ board.name }}<br>
+              <small class="text-muted d-block">{{ board.description }}</small>
+            </td>
+            <td class="align-middle">0</td>
+            <td class="align-middle">0</td>
+            <td></td>
           </tr>
-        </thead>
-        <tbody>
-          {% for board in boards %}
-            <tr>
-              <td>
-                {{ board.name }}<br>
-                <small style="color: #888">{{ board.description }}</small>
-              </td>
-              <td>0</td>
-              <td>0</td>
-              <td></td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+    
 </body>
 </html>
