--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
       </li>
     </ol>
     <table class="table">
-      <thead>
+      <thead class="thead-inverse">
         <tr>
           <th>Board</th>
           <th>Posts</th>
